--- a/index.html
+++ b/index.html
@@ -46,6 +46,50 @@
 			</div>
 
 			<form id="form-laporan" style="display: none">
+				<form id="form-laporan" style="display: none">
+					<div class="form-group">
+						<label for="tanggal">Tanggal</label>
+						<input type="date" id="tanggal" required />
+					</div>
+
+					<div class="form-group">
+						<label for="stock">Stock</label>
+						<input type="number" id="stock" placeholder="Stock" required />
+					</div>
+
+					<div class="form-group">
+						<label for="sold">Terjual</label>
+						<input type="number" id="sold" placeholder="Terjual" required />
+					</div>
+
+					<div class="form-group">
+						<label for="reject">Reject</label>
+						<input type="number" id="reject" placeholder="Reject" required />
+					</div>
+
+					<div class="form-group">
+						<label for="karyawan">Makan Karyawan</label>
+						<input
+							type="number"
+							id="karyawan"
+							placeholder="Makan Karyawan"
+							required
+						/>
+					</div>
+
+					<div class="form-group">
+						<label for="bonus">Bonus</label>
+						<input type="number" id="bonus" placeholder="Bonus" required />
+					</div>
+
+					<div class="form-group">
+						<label for="total">Total (Rp)</label>
+						<input type="number" id="total" placeholder="Total (Rp)" required />
+					</div>
+
+					<button type="submit">Tambah Laporan</button>
+				</form>
+
 				<input type="date" id="tanggal" required />
 				<input type="number" id="stock" placeholder="Stock" required />
 				<input type="number" id="sold" placeholder="Terjual" required />
