--- a/index.html
+++ b/index.html
@@ -45,50 +45,38 @@
 				</button>
 			</div>
 
-			<form id="form-laporan" style="display: none">
-				<form id="form-laporan" style="display: none">
-					<div class="form-group">
-						<label for="tanggal">Tanggal</label>
-						<input type="date" id="tanggal" required />
-					</div>
+			<form id="form-laporan" style="display: none;">
+ 				 <div class="form-group">
+   				 <label for="tanggal">Tanggal</label>
+   				 <input type="date" id="tanggal" required />
+  </div>
+  <div class="form-group">
+    <label for="stock">Stock</label>
+    <input type="number" id="stock" required />
+  </div>
+  <div class="form-group">
+    <label for="sold">Terjual</label>
+    <input type="number" id="sold" required />
+  </div>
+  <div class="form-group">
+    <label for="reject">Reject</label>
+    <input type="number" id="reject" required />
+  </div>
+  <div class="form-group">
+    <label for="karyawan">Makan Karyawan</label>
+    <input type="number" id="karyawan" required />
+  </div>
+  <div class="form-group">
+    <label for="bonus">Bonus</label>
+    <input type="number" id="bonus" required />
+  </div>
+  <div class="form-group">
+    <label for="total">Total (Rp)</label>
+    <input type="number" id="total" required />
+  </div>
+  <button type="submit">Tambah Laporan</button>
+</form>
 
-					<div class="form-group">
-						<label for="stock">Stock</label>
-						<input type="number" id="stock" placeholder="Stock" required />
-					</div>
-
-					<div class="form-group">
-						<label for="sold">Terjual</label>
-						<input type="number" id="sold" placeholder="Terjual" required />
-					</div>
-
-					<div class="form-group">
-						<label for="reject">Reject</label>
-						<input type="number" id="reject" placeholder="Reject" required />
-					</div>
-
-					<div class="form-group">
-						<label for="karyawan">Makan Karyawan</label>
-						<input
-							type="number"
-							id="karyawan"
-							placeholder="Makan Karyawan"
-							required
-						/>
-					</div>
-
-					<div class="form-group">
-						<label for="bonus">Bonus</label>
-						<input type="number" id="bonus" placeholder="Bonus" required />
-					</div>
-
-					<div class="form-group">
-						<label for="total">Total (Rp)</label>
-						<input type="number" id="total" placeholder="Total (Rp)" required />
-					</div>
-
-					<button type="submit">Tambah Laporan</button>
-				</form>
 
 				<input type="date" id="tanggal" required />
 				<input type="number" id="stock" placeholder="Stock" required />
@@ -129,36 +117,3 @@
 		<script src="script.js"></script>
 	</body>
 </html>
-<form id="form-laporan" style="display: none">
-	<div class="form-group">
-		<label for="tanggal">Tanggal</label>
-		<input type="date" id="tanggal" required />
-	</div>
-	<div class="form-group">
-		<label for="stock">Stock</label>
-		<input type="number" id="stock" placeholder="Stock" required />
-	</div>
-	<div class="form-group">
-		<label for="sold">Terjual</label>
-		<input type="number" id="sold" placeholder="Terjual" required />
-	</div>
-	<div class="form-group">
-		<label for="reject">Reject</label>
-		<input type="number" id="reject" placeholder="Reject" required />
-	</div>
-	<div class="form-group">
-		<label for="karyawan">Makan Karyawan</label>
-		<input type="number" id="karyawan" placeholder="Makan Karyawan" required />
-	</div>
-	<div class="form-group">
-		<label for="bonus">Bonus</label>
-		<input type="number" id="bonus" placeholder="Bonus" required />
-	</div>
-	<div class="form-group">
-		<label for="total">Total (Rp)</label>
-		<input type="number" id="total" placeholder="Total (Rp)" required />
-	</div>
-	<div style="grid-column: span 2;">
-		<button type="submit">Tambah Laporan</button>
-	</div>
-</form>
