--- a/index.html
+++ b/index.html
@@ -1,119 +1,228 @@
 <!DOCTYPE html>
 <html lang="id">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Laporan Penjualan Ayam Geprek</title>
-		<link rel="stylesheet" href="style.css" />
-		<script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
-	</head>
-	<body>
-		<div class="container">
-			<h1>Laporan Penjualan Ayam Geprek</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laporan Penjualan Ayam Geprek</title>
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#e67e22">
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', sans-serif;
+    }
 
-			<div class="cab-select">
-				<label for="select-cabang"><strong>Pilih Cabang:</strong></label>
-				<select id="select-cabang">
-					<option disabled selected>-- Pilih Cabang --</option>
-					<option value="Cabang A">Cabang A</option>
-					<option value="Cabang B">Cabang B</option>
-					<option value="Cabang C">Cabang C</option>
-					<option value="Tambah">+ Tambah Cabang Baru</option>
-				</select>
-				<input
-					type="text"
-					id="input-cabang-baru"
-					placeholder="Nama Cabang Baru"
-					style="display: none"
-				/>
-				<button
-					id="export-excel-btn"
-					style="
-						margin: 10px 0;
-						padding: 10px;
-						background-color: #3498db;
-						color: white;
-						border: none;
-						border-radius: 6px;
-						cursor: pointer;
-					"
-				>
-					Export ke Excel
-				</button>
-				<button id="tambah-cabang-btn" style="display: none">
-					Tambah Cabang
-				</button>
-			</div>
+    body {
+      background: linear-gradient(to right, #ffecd2, #fcb69f);
+      padding: 20px;
+    }
 
-			<form id="form-laporan" style="display: none;">
- 				 <div class="form-group">
-   				 <label for="tanggal">Tanggal</label>
-   				 <input type="date" id="tanggal" required />
-  </div>
-  <div class="form-group">
-    <label for="stock">Stock</label>
-    <input type="number" id="stock" required />
-  </div>
-  <div class="form-group">
-    <label for="sold">Terjual</label>
-    <input type="number" id="sold" required />
-  </div>
-  <div class="form-group">
-    <label for="reject">Reject</label>
-    <input type="number" id="reject" required />
-  </div>
-  <div class="form-group">
-    <label for="karyawan">Makan Karyawan</label>
-    <input type="number" id="karyawan" required />
-  </div>
-  <div class="form-group">
-    <label for="bonus">Bonus</label>
-    <input type="number" id="bonus" required />
-  </div>
-  <div class="form-group">
-    <label for="total">Total (Rp)</label>
-    <input type="number" id="total" required />
-  </div>
-  <button type="submit">Tambah Laporan</button>
-</form>
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: #1c1c1c;
+      padding: 30px;
+      border-radius: 12px;
+      color: white;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
 
+    h1 {
+      text-align: center;
+      color: #e67e22;
+      margin-bottom: 25px;
+    }
 
-				<input type="date" id="tanggal" required />
-				<input type="number" id="stock" placeholder="Stock" required />
-				<input type="number" id="sold" placeholder="Terjual" required />
-				<input type="number" id="reject" placeholder="Reject" required />
-				<input
-					type="number"
-					id="karyawan"
-					placeholder="Makan Karyawan"
-					required
-				/>
-				<input type="number" id="bonus" placeholder="Bonus" required />
-				<input type="number" id="total" placeholder="Total (Rp)" required />
-				<button type="submit">Tambah Laporan</button>
-			</form>
+    label {
+      font-weight: bold;
+      margin-bottom: 6px;
+    }
 
-			<div id="label-cabang-terpilih" style="margin: 10px 0"></div>
+    select, input[type="number"], input[type="date"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
 
-			<table>
-				<thead>
-					<tr>
-						<th>Tanggal</th>
-						<th>Stock</th>
-						<th>Sold</th>
-						<th>Reject</th>
-						<th>Makan Karyawan</th>
-						<th>Bonus</th>
-						<th>Sisa</th>
-						<th>Total (Rp)</th>
-					</tr>
-				</thead>
-				<tbody id="tabel-laporan">
-					<!-- Laporan akan ditampilkan di sini -->
-				</tbody>
-			</table>
-		</div>
+    button {
+      padding: 12px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      margin-bottom: 15px;
+    }
 
-		<script src="script.js"></script>
-	</body>
+    #export-excel-btn {
+      background-color: #3498db;
+      color: white;
+    }
+
+    #form-laporan button {
+      background-color: #2ecc71;
+      color: white;
+    }
+
+    table {
+      width: 100%;
+      margin-top: 20px;
+      border-collapse: collapse;
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: center;
+    }
+
+    thead {
+      background-color: #e67e22;
+    }
+
+    @media (max-width: 600px) {
+      table {
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Laporan Penjualan Ayam Geprek</h1>
+
+    <label for="cabang">Pilih Cabang:</label>
+    <select id="cabang">
+      <option value="">-- Pilih Cabang --</option>
+      <option value="Cabang A">Cabang A</option>
+      <option value="Cabang B">Cabang B</option>
+    </select>
+
+    <button id="export-excel-btn">Export ke Excel</button>
+
+    <form id="form-laporan" style="display: none;">
+      <label for="tanggal">Tanggal</label>
+      <input type="date" id="tanggal" required />
+
+      <label for="stock">Stock</label>
+      <input type="number" id="stock" required />
+
+      <label for="sold">Terjual</label>
+      <input type="number" id="sold" required />
+
+      <label for="reject">Reject</label>
+      <input type="number" id="reject" required />
+
+      <label for="karyawan">Makan Karyawan</label>
+      <input type="number" id="karyawan" required />
+
+      <label for="bonus">Bonus</label>
+      <input type="number" id="bonus" required />
+
+      <label for="total">Total (Rp)</label>
+      <input type="number" id="total" required />
+
+      <button type="submit">Tambah Laporan</button>
+    </form>
+
+    <div id="label-cabang-terpilih"></div>
+
+    <table id="tabel-laporan">
+      <thead>
+        <tr>
+          <th>Tanggal</th>
+          <th>Stock</th>
+          <th>Sold</th>
+          <th>Reject</th>
+          <th>Makan Karyawan</th>
+          <th>Bonus</th>
+          <th>Sisa</th>
+          <th>Total (Rp)</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+
+  <script>
+    const cabangSelect = document.getElementById("cabang");
+    const form = document.getElementById("form-laporan");
+    const labelCabang = document.getElementById("label-cabang-terpilih");
+    const tbody = document.querySelector("#tabel-laporan tbody");
+    const dataCabang = {};
+    let cabangTerpilih = "";
+
+    cabangSelect.addEventListener("change", () => {
+      cabangTerpilih = cabangSelect.value;
+      form.style.display = cabangTerpilih ? "block" : "none";
+      labelCabang.textContent = cabangTerpilih ? `Cabang aktif: ${cabangTerpilih}` : "";
+      tampilkanLaporan();
+    });
+
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+      const tanggal = document.getElementById("tanggal").value;
+      const stock = +document.getElementById("stock").value;
+      const sold = +document.getElementById("sold").value;
+      const reject = +document.getElementById("reject").value;
+      const karyawan = +document.getElementById("karyawan").value;
+      const bonus = +document.getElementById("bonus").value;
+      const total = +document.getElementById("total").value;
+      const sisa = stock - (sold + reject + karyawan + bonus);
+      const entry = { tanggal, stock, sold, reject, karyawan, bonus, sisa, total };
+      if (!dataCabang[cabangTerpilih]) dataCabang[cabangTerpilih] = [];
+      dataCabang[cabangTerpilih].push(entry);
+      form.reset();
+      tampilkanLaporan();
+    });
+
+    function tampilkanLaporan() {
+      tbody.innerHTML = "";
+      const data = dataCabang[cabangTerpilih] || [];
+      data.forEach(row => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${row.tanggal}</td>
+          <td>${row.stock}</td>
+          <td>${row.sold}</td>
+          <td>${row.reject}</td>
+          <td>${row.karyawan}</td>
+          <td>${row.bonus}</td>
+          <td>${row.sisa}</td>
+          <td>${row.total.toLocaleString()}</td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
+
+    document.getElementById("export-excel-btn").addEventListener("click", () => {
+      if (!cabangTerpilih || !dataCabang[cabangTerpilih]?.length) {
+        alert("Tidak ada data untuk diexport.");
+        return;
+      }
+      const data = dataCabang[cabangTerpilih].map(row => ({
+        Tanggal: row.tanggal,
+        Stock: row.stock,
+        Terjual: row.sold,
+        Reject: row.reject,
+        "Makan Karyawan": row.karyawan,
+        Bonus: row.bonus,
+        Sisa: row.sisa,
+        Total: row.total
+      }));
+      const worksheet = XLSX.utils.json_to_sheet(data);
+      const workbook = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(workbook, worksheet, cabangTerpilih);
+      XLSX.writeFile(workbook, `Laporan_Penjualan_${cabangTerpilih}.xlsx`);
+    });
+  </script>
+</body>
 </html>
